Case 55599, Case 55600 - fixed layout issues with Wall Template

--- a/css/hst-wall-3Plan.css
+++ b/css/hst-wall-3Plan.css
@@ -76,6 +76,13 @@
     font-style: normal;
 
 }
+.sync-paymeter p,
+.sync-paymeter span,
+.sync-paymeter div,
+.sync-paymeter li
+{
+    line-height: 17px;
+}
 
 .sync-row{
     display:block;
@@ -103,22 +110,22 @@
 	text-align:center;
 }
 
-.sync-btn{
-  display: inline-block;
-  margin-bottom: 0;
-  font-weight: normal;
-  text-align: center;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
-  cursor: pointer;
-  background-image: none;
-  border: 1px solid transparent;
-  white-space: nowrap;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.sync-btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 a.sync-btn{
@@ -184,7 +191,13 @@ a.sync-btn{
   display: inline-block;
   vertical-align: middle;
 }
-
+/* the text within the headling block needs to center vertically*/
+.sync-valign span {
+    display: block;
+    position: relative;
+    top: 50%;
+    transform: translateY(-60%);/*60% seems to center the text better to the eye*/
+}
 /* square off the round corners */
 .btn-flat,
 .input-flat {
@@ -527,7 +540,7 @@ button.sync-wall-offer-btn .sync-wall-button-font{
 
 
 /* 601-767 is still considered a 'tablet' display by Hearst*/
-@media screen and (min-width:601px) {
+@media screen and (min-width:601px) and (min-height: 700px) {
     .sync-tablet{
         display:inherit;
     }
@@ -537,12 +550,16 @@ button.sync-wall-offer-btn .sync-wall-button-font{
     }
 
 	.syncronex-wall-overlay-content{
-		height:625px;
-        width:94%;
+	    height: 70%;
+        max-width:94%;
+	    position: relative;
+	    top: 50%;
+	    transform: translateY(-50%);
 	}
 
     .sync-wall-content-padding{
-        margin:2%;
+        margin: 0;
+        padding: 50px;
         height:auto;
     }
 
@@ -580,9 +597,6 @@ button.sync-wall-offer-btn .sync-wall-button-font{
         margin-top:10px;
     }
 
-    .sync-wall-benefit-features {
-     
-    }
 	.sync-auth-row {
 	  padding-top: 15px;
 	}
@@ -682,13 +696,11 @@ button.sync-wall-offer-btn .sync-wall-button-font{
     }
 
 	.syncronex-wall-overlay-content{
-		width:720px;
+	    max-width: 94%;
 	}
 	
     .sync-wall-content-padding{
-        margin-top:50px;
-        margin-left:50px;
-        margin-right:50px;
+        padding: 50px;
     }
 
     .sync-wall-benefit-features {
@@ -760,8 +772,15 @@ button.sync-wall-offer-btn .sync-wall-button-font{
 	
 }
 
-/*@media screen and (min-height:650px){
-    .syncronex-wall-overlay-content{
-        height:625px;
+@media screen and (min-width: 1000px) {
+    .syncronex-wall-overlay-content {
+        max-width: 720px;
     }
-}*/
+}
+
+@media screen and (min-width: 1000px) and (max-height: 900px) {
+    .syncronex-wall-overlay-content {
+        height: 675px;
+
+    }
+}
